--- a/src/app/components/team-section/team-section.component.css
+++ b/src/app/components/team-section/team-section.component.css
@@ -1,13 +1,17 @@
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+   
+    margin-top: 20px;
+    border: none;
+    background-color: var(--light-grey);
+    align-items: center;
     
   }
   
   /* On mouse-over, add a deeper shadow */
   .card:hover {
-    box-shadow: 0 9px 20px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 1px 10px 0 rgba(0,0,0,0.2);
   }
   
   /* Add some padding inside the card container */
@@ -22,4 +26,11 @@
     margin-left: auto;
     margin-right: auto;
     width: 50%
+
+    
+  }
+  .container{
+    border-radius: none;
+    border: none;
+    background-color:va;
   }
