--- a/src/app/pages/landing-page/landing-page.component.css
+++ b/src/app/pages/landing-page/landing-page.component.css
@@ -19,3 +19,7 @@
         cursor: pointer;
 } 
 
+.container{
+  border-radius: none;
+  border: none;
+}
